--- a/Order.Application/Order.Application.csproj
+++ b/Order.Application/Order.Application.csproj
@@ -1,14 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Ocelot" Version="23.4.3" />
-    <PackageReference Include="Ocelot.Cache.CacheManager" Version="23.4.3" />
-  </ItemGroup>
 
 </Project>
