Complete API product

--- a/Services/Product/Product.API/appsettings.json
+++ b/Services/Product/Product.API/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "DatabaseSettings": {
+        "ConnectionString": "mongodb://admin:admin123@160.30.112.159:27017",
+        "DatabaseName": "ProductDb",
+        "CollectionName": "Products",
+        "BrandsCollection": "Brands",
+        "TypesCollection": "Types"
     }
-  },
-  "AllowedHosts": "*"
 }
