--- a/Services/Product/Product.Infrastructure/Product.Infrastructure.csproj
+++ b/Services/Product/Product.Infrastructure/Product.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
   </ItemGroup>
 
