Complete using rabbitmq

--- a/Services/Order/Order.API/appsettings.json
+++ b/Services/Order/Order.API/appsettings.json
@@ -9,5 +9,8 @@
     "Grpc": {
         "ProductAddress": "https://localhost:7065",
         "PassengerAddress": "https://localhost:5012"
+    },
+    "EventBusSettings": {
+        "HostAddress": "rabbitmq://guest:guest@160.30.112.159"
     }
 }
