--- a/Services/Product/Product.API/appsettings.json
+++ b/Services/Product/Product.API/appsettings.json
@@ -12,5 +12,8 @@
         "CollectionName": "Products",
         "BrandsCollection": "Brands",
         "TypesCollection": "Types"
+    },
+    "EventBusSettings": {
+        "HostAddress": "rabbitmq://guest:guest@160.30.112.159"
     }
 }
