--- a/BuildingBlocks/BuildingBlocks.csproj
+++ b/BuildingBlocks/BuildingBlocks.csproj
@@ -10,14 +10,14 @@
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="MagicOnion" Version="7.0.2" />
     <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="MassTransit" Version="8.4.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contracts\EventBus.Message\" />
   </ItemGroup>
 
 </Project>
